Fix a bug in dark mode toggle

--- a/src/assets/css/toggleStyles.css
+++ b/src/assets/css/toggleStyles.css
@@ -5,7 +5,7 @@ label {
   display: block;
   background: #ebebeb;
   border-radius: 200px;
-  box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
+  box-shadow: inset 0px 5px 6px rgba(0, 0, 0, 0.4),
     inset 0px -5px 15px rgba(255, 255, 255, 0.4);
   cursor: pointer;
 }
@@ -38,7 +38,7 @@ label:after {
   transition: 0.3s;
 }
 label:active:after {
-  width: 40px;
+  width: 20px;
 }
 label svg {
   position: absolute;
